更新個人頁 (詳見說明)
1. 個人頁 linense 設為 coming-soon
2. 個人頁 record 頁籤順序對調、增加篩選器、增加無紀錄樣式、小網樣式調整
3. 遊戲列表頁樣式微調
4. 配合RD套版拆分css檔案

--- a/pre/scss/components/_card.scss
+++ b/pre/scss/components/_card.scss
@@ -8,10 +8,10 @@
     &::before {
         position: absolute;
         content: '';
-        top: 0;
+        top: 20%;
         left: -50%;
         right: -50%;
-        bottom: 0;
+        height: size(188);
         background: linear-gradient(321deg, rgba(white, .1) 0%, rgba(white, 0) 50%, rgba(white, .1) 100%);
         transform: rotate(-45deg);
         z-index: 1;
@@ -25,6 +25,7 @@
 
     // small-pad ~ 768
     @include max-to(small-pad) {
+        border-radius: size(15);
         padding: size(16);
     }
 }
