--- a/pre/scss/mainPage.scss
+++ b/pre/scss/mainPage.scss
@@ -2,46 +2,27 @@
 @import "var";
 @import "animation";
 
-/* 反白選取樣式 */
-::-moz-selection {
-    background-color: color(gray-1);
-    color: rgba(color(primary-6), 1);
-}
-
-::selection {
-    background-color: color(gray-1);
-    color: rgba(color(primary-6), 1);
-}
-
-::-webkit-scrollbar {
-    width: size(8);
-    background-color: color(primary-7);
-}
-
-::-webkit-scrollbar-thumb {
-    width: size(8);
-    background-color: color(primary-4);
-    border-radius: size(4);
+* {
+    transition-duration: .2s;
+    transition-property: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Noto+Sans+TC:wght@500;700;900&display=swap');
 
-* {
-    transition-duration: .2s;
-    -webkit-tap-highlight-color: transparent;
-}
+/* body 設定 */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;700&family=Noto+Sans+TC:wght@500;700;900&display=swap');
 
 body {
     font-family: 'Inter', 'Noto Sans TC', cursive;
-    overflow-x: hidden;
-    color: white;
     background-color: color(primary);
     font-size: size(18);
     line-height: 1.5;
+    color: white;
+    overflow-x: hidden;
 
     @include max-to(laptop) {
         font-size: size(15);
