--- a/pre/scss/components/_tab.scss
+++ b/pre/scss/components/_tab.scss
@@ -1,78 +1,33 @@
 .tab {
-    display: flex;
-    background-color: color(primary-6);
-    border-radius: size(100);
-    margin-bottom: size(16);
+    margin: size(40) 0;
+    width: 100%;
+    border-bottom: size(2) solid color(gray-6);
 
     li {
-        flex: 1;
+        display: inline-block;
+        padding: size(10) size(32);
+        @include body-1;
+        color: color(gray-6);
         cursor: pointer;
-        background-color: transparent;
-        color: color(gray-9);
-        border-radius: size(100);
-        padding: size(24);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: size(8);
-        transition: none;
-
-        h5 {
-            width: size(26);
-            height: size(26);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: color(gray-9);
-            color: color(primary-6);
-            @include body-1;
-            font-weight: weight(Bold);
-            border-radius: size(100);
-        }
-
-        @media (hover: hover) {
-            &:hover {
-                color: color(primary-4);
-
-                h5 {
-                    background-color: color(primary-4);
-                }
-            }
-        }
+        margin-bottom: size(-2);
+        border-bottom: size(2) solid transparent;
 
         &.active {
-            background-color: black;
             color: white;
             cursor: default;
-
-            h5 {
-                background-color: white;
-                color: black;
-            }
+            border-color: white;
         }
     }
 }
 
 .tab-content {
-    overflow: hidden;
-    border-radius: size(30);
-    background-color: black;
-    position: relative;
-    height: size(460);
-    position: relative;
-
     li {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        padding: size(28);
         opacity: 0;
-        transition-property: opacity;
+        display: none;
 
         &.active {
             opacity: 1;
+            display: inherit;
             animation: fade-in .5s;
             z-index: 2;
 
@@ -87,94 +42,12 @@
             }
         }
     }
-
-    &::before {
-        position: absolute;
-        content: '';
-        top: size(-20);
-        left: size(-100);
-        right: size(-100);
-        bottom: size(-20);
-        background: linear-gradient(321deg, rgba(white, .1) 0%, rgba(white, 0) 50%, rgba(white, .1) 100%);
-        transform: rotate(-45deg);
-        z-index: 1;
-    }
 }
-
-
-
-// PC ~ 1440
-@include max-to(pc) {
-    .tab {
-        border-radius: svw(100);
-        margin-bottom: svw(16);
-
-        li {
-            border-radius: svw(100);
-            padding: svw(24);
-            gap: svw(8);
-        }
-    }
-
-    .tab-content {
-        border-radius: svw(30);
-        height: svw(460);
-
-        li {
-            padding: svw(28);
-        }
-
-        &::before {
-            top: svw(-20);
-            left: svw(-100);
-            right: svw(-100);
-            bottom: svw(-20);
-        }
-    }
-}
-
 
 
 // pad ~ 1024
 @include max-to(pad) {
-    .tab-content {
-        border-radius: size(30);
-        height: svw(600);
-    }
-}
-
-
-// small-pad ~ 768
-@include max-to(small-pad) {
     .tab {
-        margin-bottom: size(16);
-
-        li {
-            padding: size(12);
-
-            h5 {
-                width: size(21);
-                height: size(21);
-            }
-
-            h4 {
-                display: none;
-            }
-        }
-    }
-
-    .tab-content {
-        height: size(510);
-
-        li {
-            padding: size(32);
-        }
-
-        &::before {
-            top: size(120);
-            left: size(-120);
-            right: size(-120);
-            bottom: size(120);
-        }
+        margin: size(16) 0 size(20);
     }
 }
