--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -11,6 +11,7 @@ main {
         background-attachment: fixed;
         position: relative;
         overflow: hidden;
+        min-height: 45svw;
 
         section {
             position: inherit;
