--- a/pre/scss/components/_fulldown.scss
+++ b/pre/scss/components/_fulldown.scss
@@ -14,6 +14,7 @@
             background-color: color(primary);
             transform: none;
             border-radius: 0;
+            transition-property: max-height;
 
             >ul {
                 width: 100%;
@@ -26,14 +27,28 @@
                 >li {
                     flex: 100%;
                     text-align: center;
-                    padding: size(10) size(24);
-                    cursor: pointer;
-                    border-radius: size(10);
-                    transition-property: background-color;
 
-                    &:hover,
-                    &.active {
-                        background-color: color(primary-4);
+                    >a {
+                        display: block;
+                        padding: size(10) size(24);
+                        cursor: pointer;
+                        border-radius: size(10);
+                        transition-property: background-color;
+                        color: white;
+                    }
+
+                    @media (hover: hover) {
+                        &:hover {
+                            >a {
+                                background-color: color(primary-4);
+                            }
+                        }
+                    }
+
+                    .active {
+                        >a {
+                            background-color: color(primary-4);
+                        }
                     }
                 }
             }
